# BerkeleyAIHackathon2026

./: .env.example  .gitignore  README.md  TODOS.md  package.json  pnpm-lock.yaml
apps/api/: Dockerfile  pyproject.toml  verify_memory.py
apps/api/app/: config.py  main.py  redis_state.py  schemas.py  serializers.py
apps/api/app/db/: models.py  session.py
apps/api/app/debate/: coach.py  damage.py  gambits.py  judge.py  latency_metrics.py  materialize.py  orchestrator.py  skill_engine.py  topics.py
apps/api/app/economy/: __init__.py  award.py  catalog.py
apps/api/app/gateway/: candidates.py  gateway.py  models.py  pareto.py
apps/api/app/llm/: hosted_adapter.py
apps/api/app/memory/: embeddings.py  redis_index.py  retriever.py  store.py
apps/api/app/party/: archetypes.py  balance.py  capture.py  generator.py  hydrate.py  persona.py  personas_seed.py  progress.py
apps/api/app/routers/: capture.py  debate.py  economy.py  encounter.py  gacha.py  health.py  map.py  memory.py  models.py  onboarding.py  party.py  runs.py  training.py  world.py
apps/api/app/scripts/: bench_latency.py  bench_models.py  run_battle_training.py  seed_catalog.py
apps/api/app/skills/: analogy_strike.md  anecdote.md  audience_pulse.md  authority_cite.md  authority_reversal.md  brevity_curse.md  burden_shift.md  cadence_boost.md  callback_crescendo.md  causal_lock.md  closing_image.md  contradiction_ledger.md  credential_drop.md  credibility_shield.md  cross_examination.md  data_lens.md  emotional_appeal.md  empathy_mirror.md  error_budget.md  evidence_echo.md  expert_witness.md  frame_glitch.md  heartstring_amplifier.md  hypocrisy_hook.md  judge_question.md  leading_question.md  logical_thrust.md  memory_recall.md  memory_trap.md  metaphor_screen.md  motive_audit.md  narrowing_funnel.md  noise_screen.md  paradox_seed.md  pattern_break.md  phrase_reversal.md  premise_recall.md  quiet_devastation.md  reframe_attack.md  reputation_crosscheck.md  (+10 more)
apps/api/app/training/: battle_loop.py  benchmark.py  demo.py  genome.py  gepa.py  grpo_hitl.py  selfplay.py
apps/api/app/world/: __init__.py  boss_profile.py  (+8 more)
apps/api/scripts/: backfill_redis_memories.py  bake_canonical_world.py  bake_expansive_world.py  bench_e2e.py  bench_judge.py  latency_spike.py  verify_ws_b.py
apps/api/tests/: conftest.py  test_capture_train.py  test_conftest_fixtures.py  test_judge_fields.py  test_verdict_contract.py
(+465 files in other folders)
