[project]
name = "debate-rpg-api"
version = "0.0.0"
description = "AI Debate RPG backend — agents, debate engine, RL training, hybrid RAG"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30",
    "pgvector>=0.3.6",
    "greenlet>=3.1",
    "redis>=5.2",
    "httpx>=0.27",
    "numpy>=2.1",
    "python-json-logger>=2.0",
    "json-repair>=0.30",
    "websockets>=13.1",
]

[project.optional-dependencies]
# Heavier / optional: GEPA via DSPy. Falls back to a hand-rolled loop if absent.
training = ["dspy-ai>=2.5"]
dev = ["pytest>=8.3", "pytest-asyncio>=0.24", "pytest-cov>=5.0", "ruff>=0.7"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# Coverage is opt-in via `--cov` flags below; we don't force it on every run so a
# bare `pytest` stays fast while the impl fleet is mid-edit.

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "*/migrations/*",
    "*/__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
# fail_under intentionally not set yet (coverage gate deferred until the
# implementation fleet lands the source under test).
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
